[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Scenes/Game/Game.gd" type="Script" id=1]
[ext_resource path="res://Assets/Scenes/Game/GUI/GUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Scenes/Game/Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Scenes/Game/Enemy/Enemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Textures/game bg.png" type="Texture" id=5]
[ext_resource path="res://Assets/Scenes/Game/CameraShake.gd" type="Script" id=6]
[ext_resource path="res://Assets/Audio/Music/Espionage LOOP MOVING.wav" type="AudioStream" id=7]

[node name="Game" type="Node"]
script = ExtResource( 1 )
enemy_scene = ExtResource( 4 )

[node name="BG" type="Sprite" parent="."]
texture = ExtResource( 5 )
centered = false
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Entities" type="Node2D" parent="."]

[node name="Player" parent="Entities" instance=ExtResource( 3 )]
position = Vector2( 512, 300 )

[node name="GUI" parent="." instance=ExtResource( 2 )]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
script = ExtResource( 6 )

[node name="ShakeTween" type="Tween" parent="Camera2D"]

[node name="Duration" type="Timer" parent="Camera2D"]

[node name="Frequency" type="Timer" parent="Camera2D"]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true
[connection signal="dead" from="Entities/Player" to="GUI" method="_on_Player_dead"]
[connection signal="dead" from="Entities/Player" to="." method="_on_Player_dead"]
[connection signal="stabbed" from="Entities/Player" to="GUI" method="_on_Player_stabbed"]
[connection signal="stabbed" from="Entities/Player" to="." method="_on_Player_stabbed"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="Camera2D/Duration" to="Camera2D" method="_on_Duration_timeout"]
[connection signal="timeout" from="Camera2D/Frequency" to="Camera2D" method="_on_Frequency_timeout"]
